--- a/ch8_event/src/main/res/layout/activity_main.xml
+++ b/ch8_event/src/main/res/layout/activity_main.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <Chronometer
         android:id="@+id/chronometer"
@@ -28,11 +25,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/round_button"
             android:text="Start"
-
-
             android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            tools:ignore="OnClick" />
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/stopButton"
@@ -41,10 +35,9 @@
             android:layout_marginLeft="25dp"
             android:background="@drawable/round_button"
             android:enabled="false"
-
             android:text="Stop"
             android:textColor="#FFFFFF"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/resetButton"
@@ -54,11 +47,7 @@
             android:background="@drawable/round_button"
             android:enabled="false"
             android:text="Reset"
-
             android:textColor="#FFFFFF"
-            android:textStyle="bold"/>
-
+            android:textStyle="bold" />
     </LinearLayout>
-
-
 </RelativeLayout>
